looks to have connected

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=server
+spring.data.mongodb.uri=mongodb://gallery:password@localhost:27017/gallery-database?authSource=gallery-database&authMechanism=SCRAM-SHA-1
