--- a/deploy/compose.yml
+++ b/deploy/compose.yml
@@ -13,3 +13,13 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+  server:
+      image: server
+      restart: always
+      environment: 
+        SPRING_DATA_MONGODB_URI: mongodb://gallery:password@mongo:27017/gallery-database?authSource=gallery-database&authMechanism=SCRAM-SHA-1
+      depends_on:
+        mongo:
+          condition: service_healthy
+      ports:
+        - "8080:8080"
