--- a/server/pom.xml
+++ b/server/pom.xml
@@ -91,6 +91,16 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.5</version>
+				<configuration>
+				<to>
+					<image>server</image>
+				</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
