needed to set nginx conf to handle non root routes; added build file application for unix systems

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,5 +10,6 @@ CMD ["npm", "run", "build"]
 # deploy
 FROM nginx:stable-alpine AS production
 COPY --from=build /client/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
